--- a/subin1.html
+++ b/subin1.html
@@ -46,7 +46,7 @@
                                 <h2 class="e1">Actualizado: may 1</h2>
                                 <p class="e2">El desarrollo web es una de las carreras mejor pagadas, 
                                     con mayor demanda y de más rápido aprendizaje.</p>
-                                <figure><img src="https://ibb.co/cr4fJ2x" alt=""></figure>
+                                <figure><img src="https://i.ibb.co/HH5w7GX/cuerdas.jpg" alt=""></figure>
                             </div>
                         
                     </div>
